# dircord

./: Cargo.toml  README.md  build.rs  sample_config.toml
src/: discord_irc.rs  irc_discord.rs  main.rs
