[package]
name = "dircord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
irc = "0.15"
toml = "0.5"
serde = "1.0"
regex = "1.5.4"
lazy_static = "1.4"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "native_tls_backend"]
