[package]
name = "dircord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
irc = "0.15"
toml = "0.5"
serde = "1.0"
lazy_static = "1.4"
pulldown-cmark = "0.9.1"
fancy-regex = "0.10.0"
tokio-stream = "0.1.9"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "native_tls_backend"]

[build-dependencies.vergen]
version = "5"
default-features = false
features = ["git"]
