[package]
name = "dircord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
irc = "0.15.0"
toml = "0.5.9"
serde = "1.0.140"
lazy_static = "1.4.0"
pulldown-cmark = "0.9.1"
fancy-regex = "0.10.0"
tokio-stream = "0.1.9"
ellipse = "0.2.0"

[dependencies.tokio]
version = "1.20.0"
features = ["full"]

[dependencies.serenity]
# version = "0.11.4"
git = "https://github.com/serenity-rs/serenity"
rev = "56867af"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "native_tls_backend"]

[build-dependencies.vergen]
version = "8.2.1"
default-features = false
features = ["git", "gitcl"]
